scss/partials/_entry_edit.scss
$add_media_animation: 0ms;

div.entry-edit-modal-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0px;
  left: 0px;
  background-color: $carrot_modal_bg;
  z-index: #{$navbar_zindex + 105};
  transition: opacity 180ms ease-in;

  @include mobile() {
    position: relative;
    height: initial;
  }

  &.will-appear {
    opacity: 0;
  }

  &.appear {
    opacity: 1;
  }

  div.modal-wrapper {
    width: #{672 + 20 +8}px;
    min-height: 330px;
    max-height: 100vh;
    margin: 0px auto 50px;
    position: relative;

    @include mobile() {
      min-height: initial;
      max-height: initial;
      height: initial;
      width: 100%;
      margin: 0px;
    }

    div.entry-edit-modal {
      width: 700px;
      margin: 0px 0px 0px 28px;
      position: relative;
      background-color: white;
      border-radius: 8px;
      box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.05);
      padding: 0px;

      @include mobile() {
        width: 100%;
        margin: 0px;
        border-radius: 0px;
        box-shadow: none;
        height: initial;
      }

      div.entry-edit-modal-header-mobile {
        display: none;

        @include mobile() {
          display: block;
          height: #{64 + 59}px;
          background-color: $carrot_light_gray_7;
          width: 100%;
          text-align: center;
          position: relative;

          div.mobile-header {
            height: 64px;
            padding: 12px 18px 6px;

            button.mobile-modal-close-bt {
              @include image-2x("/img/ML/mobile_modal_close");
              width: 24px;
              height: 24px;
              background-repeat: no-repeat;
              background-size: 14px 14px;
              background-position: 5px 5px;
              position: absolute;
              top: 20px;
              left: 18px;
            }

            div.mobile-header-title {
              @include avenir_H();
              font-size: 22px;
              color: $carrot_dark_gray;
              margin-top: 4px;
            }
          }

          div.mobile-second-header {
            height: 59px;
            background-color: $carrot_light_gray_2;
            padding: 16px 18px 12px;

            div.posting-in {
              @include avenir_H();
              font-size: 12px;
              color: rgba($oc_gray_7, 0.5);
              float: left;
              margin-top: 5px;
              max-width: 58%;

              span {
                float: left;
              }
            }

            div.entry-card-dd-container {
              max-width: 42%;
            }
          }
        }
      }

      div.entry-edit-modal-header{
        height: 72px;
        width: 100%;
        background-color: $carrot_light_gray_2;
        padding: 20px 24px 20px;
        border-top-left-radius: 8px;
        border-top-right-radius: 8px;

        @include mobile() {
          display: none;
        }

        div.user-avatar-img-container{
          margin-right: 16px;
          float: left;
        }

        @include user-profile(32);

        div.posting-in {
          @include avenir_M();
          font-size: 16px;
          color: $oc_gray_7;
          float: left;
          margin-top: 5px;
          max-width: 50%;

          span {
            float: left;

            @include mobile() {
              display: none;
            }
          }
        }

        @include mobile() {
          div.entry-card-dd-container {
            div.entry-edit-topics-dd {
              left: unset;
              right: 0px;

              div.triangle {
                left: unset;
                right: 20px;
              }
            }
          }
        }
      }

      div.boards-dropdown-caret {
        @include avenir_H();
        color: $carrot_dark_gray;
        float: left;
        margin-left: 6px;
        cursor: pointer;
        position: relative;

        @include mobile() {
          color: $carrot_green;
        }

        &.no-nux::after {
          float: right;
          content: "";
          background-image: cdnUrl("/img/ML/board_settings.svg");
          background-size: 8px 8px;
          background-repeat: no-repeat;
          background-position: 0px 9px;
          width: 20px;
          height: 20px;
          margin-top: -3px;
          margin-left: 6px;
          opacity: 0.8;

          &:hover {
            opacity: 1;
          }
        }

        div.dropdown-list-container {
          top: 20px;
          left: -44px;
          width: 200px;
        }
      }

      div.entry-edit-modal-divider {
        width: 100%;
        margin: 0px;
        height: 1px;
        background-color: $carrot_light_gray_1;
        opacity: 0.3;

        &.not-visible {
          opacity: 0;
        }
      }

      div.entry-edit-modal-body {
        margin: 0px;
        padding: 24px 50px 24px 72px;
        overflow-y: auto;
        overflow-x: visible;
        max-height: calc(100vh - 72px - 88px - 1px);
        width: calc(100% + 22px);
        margin-left: -22px;

        @include mobile() {
          min-height: calc(100vh - 64px - 59px - 72px - 72px - 1px);
          max-height: initial;
          margin-left: 0px;
          padding: 24px 16px;
          width: 100%;
        }

        div.entry-edit-headline {
          border: none;
          outline: none;
          cursor: text;
          @include activity-headline();
          @include avenir_H();
          font-size: 18px;
          color: $carrot_dark_gray;
          white-space: pre-wrap;
          word-wrap: break-word;

          @include mobile() {
            width: 100%;
          }

          &:empty:before {
            content: attr(placeholder);
            display: block;
            color: #8A8E94 !important;
            font-style: none;
          }
        }

        div.rich-body-editor-container {
          position: relative;
          overflow: visible;

          div.medium-editor-media-picker {
            margin-top: 0px;
            margin-left: -50px;
            top: 0px;
          }

          div.rich-body-editor {
            border: none;
            outline: none;
            color: $carrot_dark_gray;
            @include avenir_R();
            font-size: 16px;
            margin: 24px 0;
            cursor: text;
            min-height: 85px;
            white-space: pre-wrap;
            word-wrap: break-word;
            @include activity-body();

            @include mobile() {
              width: 100%;
            }

            @include activity-attachment(true);

            &.medium-editor-placeholder:after {
              color: #8A8E94 !important;
            }

            * {
              color: $carrot_dark_gray;
            }

            &:after {
              margin: 0;
            }
          }
        }

        div.entry-edit-controls {
          margin-bottom: 16px;

          @include mobile() {
            display: none;
          }
        }
      }

      div.media-attachments {
        padding: 0px 36px;
      }

      div.entry-edit-modal-footer {
        height: 40px;
        margin: 16px 36px 32px;
        position: relative;

        @include mobile() {
          margin: 16px;
        }

        div.emoji-picker {
          float: left;
          margin-top: 4px;

          @include mobile() {
            display: none;
          }
        }

        button.attachment {
          float: left;
          margin: 0 15px 0 0;
          padding: 9px 0 0 0;
          font-size: 22px;
          height: 40px;
          opacity: 0.8;
          color: $oc_gray_7;
          transform: rotate(90deg);

          @include mobile() {
            display: none;
          }

          &:hover {
            opacity: 1;
          }
        }

        button.form-action-bt {
          margin-left: 15px;
          float: right;
          height: 40px;
          width: auto;
          min-width: 90px;
        }
      }
    }
  }
}

